namespaces/platform-system/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ops-and-ci
  namespace: platform-system
spec:
  podSelector: {}       # all pods
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: infra-ops
        - namespaceSelector:
            matchLabels:
              name: ci-cd
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: infra-ops
        - namespaceSelector:
            matchLabels:
              name: ci-cd
    - to:                  # allow DNS
        - ipBlock:
            cidr: 10.43.0.0/16
      ports:
        - protocol: UDP
          port: 53
